--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -120,11 +120,12 @@
 }
 
 .single .img_row{
-  width: 28rpx;
-  height: 28rpx;
+  width: 44rpx;
+  height: 44rpx;
 }
 
 .single .img_row image{
   width: 100%;
   height: 100%;
+  vertical-align: top;
 }
