--- a/pages/poi_detail/poi_detail.wxml
+++ b/pages/poi_detail/poi_detail.wxml
@@ -3,7 +3,7 @@
 <import src="../../wxParse/wxParse.wxml" />
 <view class='container'>
   <view class='banner'>
-    <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular='true'>
+    <swiper indicator-dots="{{indicatorDots}}" indicator-color='rgba(187,187,187,1)' indicator-active-color='#0000FF' autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular='true'>
       <block wx:for="{{imgUrls}}" wx:key="{{index}}">
         <swiper-item>
           <image src="{{item}}" class="slide-image swiper_img" />
@@ -31,7 +31,7 @@
       </view>
     </view>
     <view class='area shops'>
-      <view class='business_hours'>
+      <view class='business_hours' wx:if='{{goods.goodsInfo.openTime}}'>
         <view class='label'>营业时间：</view>
         <view class='text'>
           <view class='date'>{{goods.goodsInfo.openTime}}</view>
@@ -44,16 +44,16 @@
           <view class='date'>{{goods.goodsInfo.playTime}}</view>
         </view>
       </view>
-      <view class='contact_number'>
+      <view class='contact_number' wx:if='{{goods.goodsBase.phone}}'>
         <view class='label'>联系电话：{{goods.goodsBase.phone}}</view>
         <view class='tel_icon' data-phone='{{goods.goodsBase.phone}}' bindtap='callPhone'>
           <image src='../../img/common/phone.png'></image>
         </view>
       </view>
-      <view class='language'>
+      <view class='language' wx:if='{{goods.goodsInfo.supportedLanguage.length}}'>
         <view class='label'>服务语言：{{dateFr.getSupportedLanguage(goods.goodsInfo.supportedLanguage)}}</view>
       </view>
-      <view class='map'>
+      <view class='map' wx:if='{{goods.goodsBase.local[0] !== 0 && goods.goodsBase.local[1] !== 0}}'>
         <map id='myMap' style='width: 100%; height: 249rpx;' latitude="{{latitude}}" longitude="{{longitude}}" markers="{{markers}}" show-location></map>
       </view>
     </view>
@@ -61,20 +61,72 @@
       <view class='area_title'>产品价格</view>
       <view class='product'>
         <block wx:for='{{goodsItem}}' wx:key='{{index}}'>
-          <view>
-            <view>
+          <view class='list'>
+            <view class='p_main'>
               <view class='title'>{{item.goodsItemInfo.name}}</view>
-              <view class='buy'>
-                <button data-giid='{{item.goodsItemInfo.giid}}' bindtap='goToTheGoodsItemDetail'>立即购买</button>
+              <view>{{item.goodsItemInfo.subInfo}}</view>
+              <view>
+                <view class='price'>
+                  <view class='present'>{{item.goodsItemBase.currency}}{{item.goodsItemBase.amount ? item.goodsItemBase.amount / 100 : item.goodsItemBase.sourceAmount / 100 }}</view>
+                  <view class='original' wx:if='{{item.goodsItemBase.amount}}'>{{item.goodsItemBase.currency}}{{item.goodsItemBase.sourceAmount / 100 }}</view>
+                </view>
+                <view class='ticket' wx:if='{{item.goodsItemBase.coupon}}'>
+                  <image src='../../img/index/ticket.png'></image>
+                </view>
               </view>
             </view>
-            <view>{{item.goodsItemInfo.subInfo}}</view>
-            <view>
-              <view class='price'>
-                <view class='present'>{{item.goodsItemBase.currency}}{{item.goodsItemBase.amount / 100 }}</view>
-                <view class='original'>{{item.goodsItemBase.currency}}{{item.goodsItemBase.sourceAmount / 100 }}</view>
+            <view class='buy'>
+              <button data-giid='{{item.goodsItemInfo.giid}}' bindtap='goToTheGoodsItemDetail'>购买</button>
+            </view>
+          </view>
+        </block>
+      </view>
+      <view class='main_row'>
+        <block wx:for="{{coupons}}" wx:key="{{index}}">
+          <view class='main' data-couponId='{{item.id}}' data-id='{{item.id}}' bindtap='goToTheCouponsDetail'>
+            <image class='bg' src='../../img/index/coupon_bg.png'></image>
+            <view class='content'>
+              <view class='top'>
+                <view class='logo'>
+                  <image src='{{item.imgUrl}}'></image>
+                </view>
+                <view class='worth'>
+                  <view class='discount'>
+                    <block wx:if='{{item.type === 0}}'>
+                      <view class='num'>
+                        <text>{{item.discount / 10}}</text>
+                      </view>
+                      <view class='fracture'>
+                        <text>/折</text>
+                      </view>
+                    </block>
+                    <block wx:if='{{item.type === 1}}'>
+                      <view class='num'>
+                        <text><text class='currency'>{{item.currency}}</text>{{item.reducePrice / 100}}</text>
+                      </view>
+                      <view class='fracture'>
+                        <text>/满{{item.sourcePrice / 100}}</text>
+                      </view>
+                    </block>
+                    <block wx:if='{{item.type === 2}}'>
+                      <view class='num'>
+                        <text><text class='currency'>{{item.currency}}</text>{{item.reducePrice / 100}}</text>
+                      </view>
+                    </block>
+                  </view>
+                  <view class='expiry_date'>
+                    <text>有效期至：{{dateFr.getDate(item.expireEndAt, '/')}}</text>
+                  </view>
+                </view>
               </view>
-              <view>查看详情></view>
+              <view class='bottom'>
+                <view>
+                  <text>{{item.name}}</text>
+                </view>
+                <view>
+                  <button>立即领取</button>
+                </view>
+              </view>
             </view>
           </view>
         </block>
