--- a/pages/poi_detail/poi_detail.wxss
+++ b/pages/poi_detail/poi_detail.wxss
@@ -1,22 +1,22 @@
-.banner{
+.banner {
   width: 100%;
   height: 655rpx;
   box-sizing: border-box;
   margin-bottom: 30rpx;
 }
 
-.banner swiper{
+.banner swiper {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
-.banner swiper image{
+.banner swiper image {
   width: 100%;
   height: 100%;
 }
 
-.collect{
+.collect {
   position: absolute;
   top: 44rpx;
   right: 32rpx;
@@ -24,174 +24,187 @@
   height: 40rpx;
 }
 
-.collect image{
+.collect image {
   width: 100%;
   height: 100%;
 }
 
-.row{
+.row {
   padding: 0 40rpx;
 }
 
-.area{
+.area {
   padding: 40rpx 0;
-  border-bottom: 1rpx solid #E0E0E0;
+  border-bottom: 1rpx solid #e0e0e0;
   box-sizing: border-box;
 }
 
-.border_0{
+.border_0 {
   border: 0;
 }
 
-.padding_top_0{
+.padding_top_0 {
   padding-top: 0;
 }
 
-.area .title{
+.area .title {
   font-size: 64rpx;
   line-height: 72rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   margin-bottom: 40rpx;
 }
 
-.area .star{
+.area .star {
   display: flex;
   align-items: center;
   margin-bottom: 33rpx;
 }
 
-.area .star image{
+.area .star image {
   width: 22rpx;
   height: 22rpx;
   margin-right: 6rpx;
 }
 
-.area .tags{
+.area .tags {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
 }
 
-.area .tags view{
+.area .tags view {
   font-size: 22rpx;
   line-height: 30rpx;
   padding: 5rpx 12rpx;
-  color: #23C2F7;
+  color: #23c2f7;
   border-radius: 4rpx;
-  background-color: #E0F7FF;
+  background-color: #e0f7ff;
   margin-right: 16rpx;
   margin-bottom: 10rpx;
 }
 
-.area .tags view:last-of-type{
+.area .tags view:last-of-type {
   margin-right: 0;
 }
 
-.area .label{
+.area .label {
   font-size: 29rpx;
   line-height: 41rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
 }
 
-.area .area_title{
+.area .area_title {
   margin: 24rpx 0 40rpx;
   font-size: 36rpx;
   line-height: 50rpx;
   color: #484848;
 }
 
-.area .product>view{
+.area .product>view {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   /* height: 264rpx; */
   padding: 32rpx 24rpx;
   border-radius: 16rpx;
-  background-color: #F2F5F7;
+  background-color: #f2f5f7;
   margin-bottom: 20rpx;
   box-sizing: border-box;
 }
 
-.area .product>view:last-of-type{
+.area .product>view:last-of-type {
   margin-bottom: 0;
 }
 
-.area .product>view>view:first-of-type{
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 8rpx;
+.area .product>view .p_main {
+  width: 452rpx;
 }
 
-.area .product>view>view:first-of-type .title{
-  flex: 1;
-  margin-right: 28rpx;
+.area .product>view .p_main .title {
+  width: 100%;
   font-size: 32rpx;
   line-height: 45rpx;
   color: #484848;
-  margin-bottom: 0;
+  margin-bottom: 8rpx;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
 
-.area .product>view>view:first-of-type .buy button{
-  width: 154rpx;
+.area .product>view .buy button {
+  width: 128rpx;
   height: 48rpx;
-  line-height: 48rpx;
+  line-height: 46rpx;
   color: #fff;
   font-size: 22rpx;
   letter-spacing: 2rpx;
   border-radius: 31rpx;
-  background-color: #F97572;
+  background-color: #f97572;
   padding: 0;
 }
 
-.area .product>view>view:nth-of-type(2){
+.area .product>view .p_main>view:nth-of-type(2) {
+  width: 100%;
   font-size: 24rpx;
   line-height: 33rpx;
-  color: #666666;
+  color: #666;
   margin-bottom: 24rpx;
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
 }
 
-.area .product>view>view:nth-of-type(3){
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.area .product>view>view:nth-of-type(3) .price{
+.area .product>view .p_main>view:nth-of-type(3) {
   display: flex;
   align-items: center;
 }
 
-.area .product>view>view:nth-of-type(3) .price .present{
+.area .product>view .p_main>view:nth-of-type(3) .price {
+  display: flex;
+  align-items: center;
+}
+
+.area .product>view .p_main>view:nth-of-type(3) .price .present {
   font-size: 32rpx;
   line-height: 45rpx;
-  color: #F97572;
+  color: #f97572;
   margin-right: 24rpx;
 }
 
-.area .product>view>view:nth-of-type(3) .price .original{
+.area .product>view .p_main>view:nth-of-type(3) .price .original {
   font-size: 24rpx;
   line-height: 33rpx;
-  color: #8C8C8C;
-  text-decoration:line-through;
+  color: #8c8c8c;
+  text-decoration: line-through;
 }
 
-.area .product>view>view:nth-of-type(3)>view:last-of-type{
-  font-size: 24rpx;
-  line-height: 33rpx;
-  color: #666666;
+.area .product>view .p_main>view:nth-of-type(3) .ticket {
+  width: 38rpx;
+  height: 29rpx;
+  margin-left: 30rpx;
 }
 
-.area .comment .user_info{
+.area .product>view .p_main>view:nth-of-type(3) .ticket image {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.area .comment .user_info {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 40rpx;
 }
 
-.area .comment .user_info .user{
+.area .comment .user_info .user {
   display: flex;
   align-items: center;
 }
 
-.area .comment .user_info .user .avatar{
+.area .comment .user_info .user .avatar {
   width: 80rpx;
   height: 80rpx;
   border-radius: 50%;
@@ -199,157 +212,268 @@
   overflow: hidden;
 }
 
-.area .comment .user_info .user .avatar image{
+.area .comment .user_info .user .avatar image {
   width: 100%;
   height: 100%;
 }
 
-.area .comment .user_info .user .name_date .name{
+.area .comment .user_info .user .name_date .name {
   font-size: 32rpx;
   line-height: 45rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   margin-bottom: 8rpx;
 }
 
-.area .comment .user_info .user .name_date .date{
+.area .comment .user_info .user .name_date .date {
   font-size: 20rpx;
   line-height: 28rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
 }
 
-.area .comment .user_info .star{
+.area .comment .user_info .star {
   /* padding-top: 11rpx; */
   margin-bottom: 0;
 }
 
-.area .comment .user_info .star image{
+.area .comment .user_info .star image {
   width: 16rpx;
   height: 16rpx;
   margin-right: 4rpx;
   vertical-align: top;
 }
 
-.area .comment .user_info .star image:last-of-type{
+.area .comment .user_info .star image:last-of-type {
   margin-right: 0;
 }
 
-.area .comment .main{
+.area .comment .main {
   margin-bottom: 40rpx;
 }
 
-.area .comment .main .text{
+.area .comment .main .text {
   font-size: 32rpx;
   line-height: 32rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   margin-bottom: 24rpx;
 }
 
-.area .comment .main .img_row{
+.area .comment .main .img_row {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
 
-.area .comment .main .img_row image{
+.area .comment .main .img_row image {
   width: 212rpx;
   height: 212rpx;
   border-radius: 8rpx;
   margin-bottom: 16rpx;
 }
 
-.area .see{
+.area .see {
   font-size: 28rpx;
   line-height: 32rpx;
-  color: #23C2F7;
+  color: #23c2f7;
 }
 
-.area .comment_empty{
+.area .comment_empty {
   font-size: 28rpx;
   line-height: 32rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   text-align: center;
 }
 
-.area .introduce .wxParse-p .WxEmojiView{
+.area .introduce .wxParse-p .WxEmojiView {
   font-size: 28rpx;
   line-height: 40rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
   margin-bottom: 40rpx;
 }
 
-.area .introduce .wxParse-p:last-of-type .WxEmojiView{
+.area .introduce .wxParse-p:last-of-type .WxEmojiView {
   margin-bottom: 0;
 }
 
-.area .introduce .wxParse-p image{
+.area .introduce .wxParse-p image {
   max-width: 100% !important;
   vertical-align: top;
   border-radius: 8rpx;
   margin-bottom: 40rpx;
 }
 
-.area .explain>view{
+.area .explain>view {
   margin-bottom: 24rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
 }
 
-.area .explain>view view:first-of-type{
+.area .explain>view view:first-of-type {
   font-size: 28rpx;
   line-height: 40rpx;
   font-weight: bold;
 }
 
-.area .explain>view view:last-of-type{
+.area .explain>view view:last-of-type {
   font-size: 24rpx;
   line-height: 40rpx;
 }
 
-.shops>view{
+.shops>view {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 40rpx;
 }
 
-.shops>view:last-of-type{
+.shops>view:last-of-type {
   margin-bottom: 0;
 }
 
-.shops>view.business_hours{
+.shops>view.business_hours {
   align-items: flex-start;
 }
 
-.shops>view .text{
+.shops>view .text {
   flex: 1;
 }
 
-.shops>view .text .date{
+.shops>view .text .date {
   font-size: 29rpx;
   line-height: 41rpx;
-  color: #3C3C3C;
+  color: #3c3c3c;
 }
 
-.shops>view .text .tips{
+.shops>view .text .tips {
   font-size: 26rpx;
   line-height: 37rpx;
-  color: #8C8C8C;
+  color: #8c8c8c;
   margin-top: 16rpx;
 }
 
-.shops>view .tel_icon{
+.shops>view .tel_icon {
   width: 32rpx;
   height: 32rpx;
 }
 
-.shops>view .tel_icon image{
+.shops>view .tel_icon image {
   width: 100%;
   height: 100%;
   vertical-align: top;
 }
 
-.shops .map{
+.shops .map {
   border-radius: 16rpx;
   overflow: hidden;
 }
 
+.main_row .main {
+  position: relative;
+  width: 684rpx;
+  height: 238rpx;
+  margin: 25rpx auto 0;
+}
+
+.main_row .main:last-of-type {
+  margin-bottom: 0;
+}
+
+.main_row .main .bg {
+  width: 100%;
+  height: 100%;
+}
+
+.main_row .main .content {
+  position: absolute;
+  left: 7rpx;
+  top: 7rpx;
+  width: 670rpx;
+  height: 224rpx;
+  padding: 24rpx;
+  box-sizing: border-box;
+}
+
+.main_row .main .content .top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main_row .main .content .top .logo {
+  width: 92rpx;
+  height: 92rpx;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.main_row .main .content .top .logo image {
+  width: 100%;
+  height: 100%;
+}
+
+.main_row .main .content .top .worth {
+  text-align: right;
+}
+
+.main_row .main .content .top .worth .discount {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  color: #3c3c3c;
+}
+
+.main_row .main .content .top .worth .discount .num {
+  font-size: 62rpx;
+  line-height: 59rpx;
+  font-weight: normal;
+  margin-right: 10rpx;
+}
+
+.main_row .main .content .top .worth .discount .num .currency {
+  font-size: 24rpx;
+  line-height: 33rpx;
+}
+
+.main_row .main .content .top .worth .discount .fracture {
+  position: relative;
+  font-size: 24rpx;
+  top: -4rpx;
+}
+
+.main_row .main .content .top .worth .expiry_date {
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #3c3c3c;
+}
+
+.main_row .main .content .bottom {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 51rpx;
+}
+
+.main_row .main .content .bottom view:first-of-type {
+  max-width: 377rpx;
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #666;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.main_row .main .content .bottom view:last-of-type button {
+  width: 154rpx;
+  height: 48rpx;
+  line-height: 46rpx;
+  font-size: 22rpx;
+  letter-spacing: 2rpx;
+  border: 1rpx solid #23c2f7;
+  background-color: #fff;
+  color: #23c2f7;
+  border-radius: 48rpx;
+  padding: 0;
+}
+
+.main_row .main .content .bottom view:last-of-type button.disabled {
+  border: 1rpx solid #b7b7b7;
+  color: #b7b7b7;
+}
