--- a/pages/shoppingCart/shoppingCart.wxss
+++ b/pages/shoppingCart/shoppingCart.wxss
@@ -76,111 +76,137 @@
   margin-bottom: 40rpx;
 }
 
-.like .recommend .list .img_row {
+.like .recommend .list>.img_row {
+  position: relative;
   width: 100%;
-  height: 333rpx;
-  margin-bottom: 25rpx;
+  height: 324rpx;
+  border-radius: 10rpx;
+  overflow: hidden;
+  margin-bottom: 24rpx;
 }
 
-.like .recommend .list .img_row image {
+.like .recommend .list .img_row .bg {
   width: 100%;
   height: 100%;
   vertical-align: top;
 }
 
-.like .recommend .list .info {
+.like .recommend .list .img_row .icon{
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 10rpx;
+  padding: 0 10rpx;
   display: flex;
   align-items: center;
-  margin-bottom: 17rpx;
+  justify-content: space-between;
 }
 
-.like .recommend .list .info .star {
-  flex: 1;
-  line-height: 0;
+.like .recommend .list .img_row .icon .icon_left{
+  display: flex;
+  align-items: center;
 }
 
-.like .recommend .list .info .star image {
-  width: 16rpx;
-  height: 16rpx;
-  margin-right: 4rpx;
+.like .recommend .list .img_row .icon .icon_left image{
+  width: 28rpx;
+  height: 28rpx;
   vertical-align: top;
 }
 
-.like .recommend .list .info .num {
-  flex: 1;
-  font-size: 20rpx;
-  line-height: 24rpx;
-  color: #8c8c8c;
-  text-align: right;
+.like .recommend .list .img_row .icon .icon_left image.top{
+  width: 56rpx;
 }
 
-.like .recommend .list .title_warp {
-  width: 100%;
+.like .recommend .list .img_row .icon .icon_left image + image{
+  margin-left: 8rpx;
+}
+
+.like .recommend .list .img_row .icon .icon_right{
+  display: flex;
+}
+
+.like .recommend .list .img_row .icon .icon_right .ticket{
+  width: 38rpx;
+  height: 28rpx;
+  vertical-align: top;
+}
+
+.like .recommend .list .title {
   height: 84rpx;
   font-size: 32rpx;
   line-height: 42rpx;
   color: #3c3c3c;
-  font-weight: bold;
-  margin-bottom: 11rpx;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
   overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  margin-bottom: 8rpx;
+  text-align: left;
 }
 
 .like .recommend .list .location {
   display: flex;
   align-items: center;
-  margin-bottom: 17rpx;
+  margin-bottom: 16rpx;
 }
 
-.like .recommend .list .location .icon {
-  width: 14rpx;
+.like .recommend .list .location .img_row {
+  width: 16rpx;
   height: 16rpx;
-  margin-right: 14rpx;
-  line-height: 0;
+  margin-right: 13rpx;
 }
 
-.like .recommend .list .location .icon image {
+.like .recommend .list .location .img_row image {
   width: 100%;
   height: 100%;
   vertical-align: top;
 }
 
 .like .recommend .list .location .text {
-  flex: 1;
   font-size: 20rpx;
   line-height: 28rpx;
   color: #8c8c8c;
 }
 
-.like .recommend .list .worth {
+.like .recommend .list .info {
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
 
-.like .recommend .list .worth .price {
-  flex: 1;
+.like .recommend .list .info .price {
   max-width: 200rpx;
   font-size: 32rpx;
   line-height: 32rpx;
   color: #d9333f;
-  overflow:hidden;
-  white-space:nowrap;
-  text-overflow:ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
-.like .recommend .list .worth .ticket {
-  width: 35rpx;
-  height: 25rpx;
-  line-height: 0;
+.like .recommend .list .info .price .ashy{
+  color: #999;
 }
 
-.like .recommend .list .worth .ticket image {
-  width: 100%;
-  height: 100%;
+.like .recommend .list .info .price text text {
+  font-size: 20rpx;
+}
+
+.like .recommend .list .info .star {
+  flex: 1;
+  height: 14rpx;
+  text-align: right;
+}
+
+.like .recommend .list .info .star image {
+  width: 14rpx;
+  height: 14rpx;
+  margin-right: 5rpx;
   vertical-align: top;
+}
+
+.like .recommend .list .info .star image:last-of-type {
+  margin-right: 0;
 }
 
 .recommend_empty {
