--- a/pages/feedback/feedback.wxml
+++ b/pages/feedback/feedback.wxml
@@ -9,7 +9,7 @@
     <textarea value='{{info}}' placeholder='请描述下你要反馈的内容…' bindinput='handleInputInfo'></textarea>
   </view>
   <view class='phone'>
-    <input type='number' value='{{contact}}' placeholder='请输入手机号码'></input>
+    <input type='number' value='{{contact}}' placeholder='请输入手机号码' bindinput='handleInputContact'></input>
   </view>
   <view class='button'>
     <button class='allow' bindtap='handleSubmitFeedBack'>提交反馈</button>
