--- a/pages/goodItemDetail/goodItemDetail.wxss
+++ b/pages/goodItemDetail/goodItemDetail.wxss
@@ -22,6 +22,7 @@
   border-radius: 16rpx;
   background-color: #F2F5F7;
   padding: 40rpx 40rpx 24rpx;
+  margin-top: 20rpx;
   box-sizing: border-box;
 }
 
@@ -144,3 +145,125 @@
   background-color: #F97572;
 }
 
+.main_row{
+  margin-top: 40rpx;
+}
+
+.main_row .main {
+  position: relative;
+  width: 684rpx;
+  height: 238rpx;
+  margin: 0 auto 25rpx;
+}
+
+.main_row .main:last-of-type {
+  margin-bottom: 0;
+}
+
+.main_row .main .bg {
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
+
+.main_row .main .content {
+  position: absolute;
+  left: 7rpx;
+  top: 7rpx;
+  width: 670rpx;
+  height: 224rpx;
+  padding: 24rpx;
+  box-sizing: border-box;
+}
+
+.main_row .main .content .top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main_row .main .content .top .logo {
+  width: 92rpx;
+  height: 92rpx;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.main_row .main .content .top .logo image {
+  width: 100%;
+  height: 100%;
+}
+
+.main_row .main .content .top .worth {
+  text-align: right;
+}
+
+.main_row .main .content .top .worth .discount {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  color: #3c3c3c;
+}
+
+.main_row .main .content .top .worth .discount .num {
+  font-size: 62rpx;
+  line-height: 59rpx;
+  font-weight: normal;
+  margin-right: 10rpx;
+}
+
+.main_row .main .content .top .worth .discount .num .currency {
+  font-size: 24rpx;
+  line-height: 33rpx;
+}
+
+.main_row .main .content .top .worth .discount .fracture {
+  position: relative;
+  font-size: 24rpx;
+  top: -4rpx;
+}
+
+.main_row .main .content .top .worth .expiry_date {
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #3c3c3c;
+}
+
+.main_row .main .content .bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 51rpx;
+}
+
+.main_row .main .content .bottom view:first-of-type {
+  max-width: 377rpx;
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #666;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.main_row .main .content .bottom view:last-of-type{
+  font-size: 0;
+}
+
+.main_row .main .content .bottom view:last-of-type button {
+  width: 154rpx;
+  height: 48rpx;
+  line-height: 46rpx;
+  font-size: 22rpx;
+  letter-spacing: 2rpx;
+  border: 1rpx solid #23c2f7;
+  background-color: #fff;
+  color: #23c2f7;
+  border-radius: 48rpx;
+  padding: 0;
+}
+
+.main_row .main .content .bottom view:last-of-type .hasExists{
+  font-size: 24rpx;
+  line-height: 33rpx;
+  color: #8C8C8C;
+}
