--- a/pages/poi_detail/poi_detail.wxml
+++ b/pages/poi_detail/poi_detail.wxml
@@ -68,7 +68,7 @@
               <view>
                 <view class='price'>
                   <view class='present'>{{item.goodsItemBase.currency}}{{item.goodsItemBase.amount ? item.goodsItemBase.amount / 100 : item.goodsItemBase.sourceAmount / 100 }}</view>
-                  <view class='original' wx:if='{{item.goodsItemBase.amount}}'>{{item.goodsItemBase.currency}}{{item.goodsItemBase.sourceAmount / 100 }}</view>
+                  <view class='original' wx:if='{{item.goodsItemBase.amount && item.goodsItemBase.amount !== item.goodsItemBase.sourceAmount}}'>{{item.goodsItemBase.currency}}{{item.goodsItemBase.sourceAmount / 100 }}</view>
                 </view>
                 <view class='ticket' wx:if='{{item.goodsItemBase.coupon}}'>
                   <image src='../../img/index/ticket.png'></image>
