--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -173,6 +173,78 @@
   color: #3c3c3c;
 }
 
+.pickUp{
+  margin-top: 40rpx;
+}
+
+.pickUp .tab-content{
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.pickUp .tab-content .tab-text{
+  position: relative;
+  width: 100rpx;
+  height: 50rpx;
+  font-size: 36rpx;
+  color: #8C8C8C;
+  margin-right: 20rpx;
+  padding-bottom: 15rpx;
+}
+
+.pickUp .tab-content .tab-text image{
+  display: none;
+}
+
+.pickUp .tab-content .active{
+  color: #484848;
+}
+
+.pickUp .tab-content .active image{
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 60rpx;
+  height: 7rpx;
+}
+
+.pickUp .self_taking{
+  margin-top: 40rpx;
+}
+
+.pickUp .self_taking .radio_label{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 28rpx;
+}
+
+.pickUp .self_taking .radio_label .label{
+  width: 500rpx;
+  color: #3c3c3c;
+  font-size: 32rpx;
+  text-overflow: ellipsis;
+}
+
+.pickUp .self_taking .radio_label .radio_border{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32rpx;
+  height: 32rpx;
+  border-radius: 50%;
+  border: 2rpx solid #23C2F7;
+}
+
+.pickUp .self_taking .radio_label .radio_border .radio{
+  width: 20rpx;
+  height: 20rpx;
+  border-radius: 10rpx;
+  background-color: #23C2F7;
+}
+
 .pay {
   position: fixed;
   left: 0;
