--- a/pages/poi_detail/poi_detail.wxml
+++ b/pages/poi_detail/poi_detail.wxml
@@ -81,7 +81,8 @@
           </view>
         </block>
       </view>
-      <view class='main_row'>
+      <view class='product_num' bindtap='goToTheChildProductList' wx:if='{{goodsItemCount >= 5}}'>查看全部{{goodsItemCount}}个商品</view>
+      <view class='main_row' wx:if='{{coupons.length}}'>
         <block wx:for="{{coupons}}" wx:key="{{index}}">
           <view class='main' data-couponId='{{item.id}}' data-id='{{item.id}}' bindtap='goToTheCouponsDetail'>
             <image class='bg' src='../../img/index/coupon_bg.png'></image>
@@ -164,7 +165,7 @@
           </view>
         </view>
       </block>
-      <view class='see' wx:if='{{comment.length}}'>查看全部{{commentCount}}条点评</view>
+      <view class='see' bindtap='goToTheCommentList' wx:if='{{comment.length}}'>查看全部{{commentCount}}条点评</view>
       <view class='comment_empty' wx:if='{{!comment.length}}'>暂无评论</view>
     </view>
     <view class='area border_0'>
